--- a/css/premiersStyles.css
+++ b/css/premiersStyles.css
@@ -84,6 +84,7 @@
 
 .hbox, .vbox {
     -fx-spacing: 10;
+    -fx-background-color: blue;
 }
 
 
@@ -110,4 +111,36 @@
     -fx-background-color: #2c3e50;
     -fx-text-fill: white;
     -fx-padding: 6;
+}
+
+#SelectionMenu {
+    -fx-pref-height: 1000;
+    -fx-pref-width: 200;
+}
+
+#SelectionButton {
+    -fx-padding: 10 40 10 40;
+    -fx-font-size: 12;
+}
+
+
+#TradeTable {
+    -fx-pref-width: 500;
+    -fx-pref-height: 1000;
+}
+
+#create {
+    -fx-padding: 20;
+}
+#edit {
+    -fx-padding: 20;
+}
+
+.table-row-cell:empty {
+    -fx-background-color: transparent;
+}
+
+.table-cell {
+    -fx-padding: 2;
+    -fx-cell-size: 10;
 }
